# terranix-codegen

./: .envrc  .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  CLAUDE.md  README.md  codebook.toml  flake.nix  hie.yaml  hk.pkl  statix.toml  terranix-codegen.cabal
.github/workflows/: check.yaml  check.yml  pages.yaml  pages.yml
app/: Main.hs  SchemaPrinter.hs
app/CLI/: Commands.hs  Parser.hs  Types.hs
app/TerranixCodegen/: Main.hs  ProviderSchema.hs
app/TerranixCodegen/ProviderSchema/: Attribute.hs  Block.hs  CtyType.hs  Function.hs  Identity.hs  Parameter.hs  Provider.hs  Schema.hs  Types.hs
docs/: book.toml
docs/plans/: 2026-03-10-description-gaps-design.md  2026-03-10-description-gaps-implementation.md
docs/src/: SUMMARY.md  design-overview.md  documentation-generation.md  examples.md  introduction.md  option-builder.md  type-mapper.md
docs/superpowers/plans/: 2026-03-17-nix-generators.md
docs/superpowers/specs/: 2026-03-17-nix-generators-design.md
lib/TerranixCodegen/: Description.hs  FileOrganizer.hs  ModuleGenerator.hs  OptionBuilder.hs  PrettyPrint.hs  ProviderSchema.hs  ProviderSpec.hs  TerraformGenerator.hs  TypeMapper.hs
lib/TerranixCodegen/ProviderSchema/: Function.hs  Identity.hs  Schema.hs
nix/flake/: ci.nix  default.nix  devshell.nix  docs.nix  generators.nix  git-hooks.nix  haskell.nix  lib.nix  nix-unit.nix  treefmt.nix
nix/flake/ci/: check.nix  default.nix  pages.nix
nix/generators/: default.nix  generators.test.nix
nix/lib/: tuple.nix  tuple.test.nix
test/: FileOrganizerSpec.hs  ModuleGeneratorSpec.hs  OptionBuilderSpec.hs  TestUtils.hs  TypeMapperSpec.hs
test/TerranixCodegen/: DescriptionSpec.hs  FileOrganizerSpec.hs  ModuleGeneratorSpec.hs  OptionBuilderSpec.hs  ProviderSpecSpec.hs  TerraformGeneratorSpec.hs  TypeMapperSpec.hs
