cabal-version: 3.0
name: terranix-codegen
version: 0.1.0.0
synopsis:
  A program for generating Terranix modules from Terraform provider schemata

homepage: https://github.com/synapdeck/terranix-codegen
license: MPL-2.0
license-file: LICENSE
author: Alexis Williams
maintainer: alexis@typedr.at
copyright: ©️ 2025 Synapdeck, Inc.
category: System
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  -- cabal-gild: discover
  import: warnings
  exposed-modules:
    TerranixCodegen.PrettyPrint
    TerranixCodegen.ProviderSchema
    TerranixCodegen.ProviderSchema.Attribute
    TerranixCodegen.ProviderSchema.Block
    TerranixCodegen.ProviderSchema.CtyType
    TerranixCodegen.ProviderSchema.Function
    TerranixCodegen.ProviderSchema.Identity
    TerranixCodegen.ProviderSchema.Provider
    TerranixCodegen.ProviderSchema.Schema
    TerranixCodegen.ProviderSchema.Types
    TerranixCodegen.TypeMapper

  build-depends:
    aeson ^>=2.2.3.0,
    base ^>=4.20.2.0,
    bytestring ^>=0.12,
    containers ^>=0.7,
    data-fix ^>=0.3,
    hnix ^>=0.17.0,
    prettyprinter ^>=1.7.1,
    prettyprinter-ansi-terminal ^>=1.1.3,
    text ^>=2.1.3,
    vector ^>=0.13,

  default-extensions:
    OverloadedStrings

  hs-source-dirs: lib
  default-language: GHC2024

executable terranix-codegen
  -- cabal-gild: discover
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.20.2.0,
    terranix-codegen,

  default-extensions:
    OverloadedStrings

  hs-source-dirs: app
  default-language: GHC2024

executable schema-printer
  -- cabal-gild: discover
  import: warnings
  main-is: SchemaPrinter.hs
  build-depends:
    base ^>=4.20,
    bytestring ^>=0.12,
    prettyprinter-ansi-terminal ^>=1.1,
    terranix-codegen,

  default-extensions:
    OverloadedStrings

  hs-source-dirs: app
  default-language: GHC2024

test-suite terranix-codegen-tests
  -- cabal-gild: discover
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    TypeMapperSpec

  build-depends:
    base ^>=4.20,
    containers ^>=0.7,
    hnix ^>=0.17,
    hspec ^>=2.11,
    terranix-codegen,

  build-tool-depends:
    hspec-discover:hspec-discover ^>=2.11

  default-extensions:
    OverloadedStrings
    QuasiQuotes

  hs-source-dirs: test
  default-language: GHC2024
