cabal-version: 3.0
name: terranix-codegen
version: 0.1.0.0
synopsis:
  A program for generating Terranix modules from Terraform provider schemata

homepage: https://github.com/synapdeck/terranix-codegen
license: MPL-2.0
license-file: LICENSE
author: Alexis Williams
maintainer: alexis@typedr.at
copyright: ©️ 2025 Synapdeck, Inc.
category: System
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  -- cabal-gild: discover
  import: warnings
  exposed-modules:
    TerranixCodegen.FileOrganizer
    TerranixCodegen.ModuleGenerator
    TerranixCodegen.OptionBuilder
    TerranixCodegen.PrettyPrint
    TerranixCodegen.ProviderSchema
    TerranixCodegen.ProviderSchema.Attribute
    TerranixCodegen.ProviderSchema.Block
    TerranixCodegen.ProviderSchema.CtyType
    TerranixCodegen.ProviderSchema.Function
    TerranixCodegen.ProviderSchema.Identity
    TerranixCodegen.ProviderSchema.Provider
    TerranixCodegen.ProviderSchema.Schema
    TerranixCodegen.ProviderSchema.Types
    TerranixCodegen.ProviderSpec
    TerranixCodegen.TerraformGenerator
    TerranixCodegen.TypeMapper

  build-depends:
    aeson ^>=2.2.3.0,
    base ^>=4.20.2.0,
    bytestring ^>=0.12,
    containers ^>=0.7,
    data-fix ^>=0.3,
    directory ^>=1.3,
    filepath ^>=1.5,
    hnix ^>=0.17.0,
    megaparsec ^>=9.7,
    mtl ^>=2.3,
    prettyprinter ^>=1.7.1,
    prettyprinter-ansi-terminal ^>=1.1.3,
    process ^>=1.6,
    temporary ^>=1.3,
    text ^>=2.1.3,
    vector ^>=0.13,
    versions ^>=6.0,

  default-extensions:
    OverloadedStrings

  hs-source-dirs: lib
  default-language: GHC2024

executable terranix-codegen
  -- cabal-gild: discover
  import: warnings
  main-is: Main.hs
  other-modules:
    CLI.Commands
    CLI.Parser
    CLI.Types
    Paths_terranix_codegen

  build-depends:
    aeson ^>=2.2.3.0,
    aeson-pretty ^>=0.8,
    base ^>=4.20.2.0,
    bytestring ^>=0.12,
    mtl ^>=2.3,
    optparse-applicative ^>=0.18,
    prettyprinter ^>=1.7.1,
    prettyprinter-ansi-terminal ^>=1.1,
    terranix-codegen,
    text ^>=2.1.3,

  default-extensions:
    OverloadedStrings

  hs-source-dirs: app
  default-language: GHC2024

test-suite terranix-codegen-tests
  -- cabal-gild: discover
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    TerranixCodegen.FileOrganizerSpec
    TerranixCodegen.ModuleGeneratorSpec
    TerranixCodegen.OptionBuilderSpec
    TerranixCodegen.ProviderSpecSpec
    TerranixCodegen.TerraformGeneratorSpec
    TerranixCodegen.TypeMapperSpec
    TestUtils

  build-depends:
    aeson ^>=2.2.3.0,
    base ^>=4.20,
    bytestring ^>=0.12,
    containers ^>=0.7,
    directory ^>=1.3,
    filepath ^>=1.5,
    hnix ^>=0.17,
    hspec ^>=2.11,
    megaparsec ^>=9.7,
    mtl ^>=2.3,
    process ^>=1.6,
    temporary ^>=1.3,
    terranix-codegen,
    text ^>=2.1,
    versions ^>=6.0,

  default-extensions:
    OverloadedStrings
    QuasiQuotes

  hs-source-dirs: test
  default-language: GHC2024
